[EFL] FTL buildfix, add missing includes https://bugs.webkit.org/show_bug.cgi?id=126641

Patch by Peter Molnar <pmolnar.u-szeged@partner.samsung.com> on 2014-01-14
Reviewed by Csaba Osztrogonác.

* ftl/FTLOSREntry.cpp:
* ftl/FTLOSRExitCompiler.cpp:

Canonical link: https://commits.webkit.org/144951@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@161962 268f45cc-cd09-0410-ab3c-d52691b4dbfc