Source/JavaScriptCore/ftl/FTLOSREntry.cpp
@@ -31,6 +31,7 @@
 #include "DFGJITCode.h"
 #include "FTLForOSREntryJITCode.h"
 #include "JSStackInlines.h"
+#include "OperandsInlines.h"
 
 #if ENABLE(FTL_JIT)
 
