Source/JavaScriptCore/ftl/FTLOSRExitCompiler.cpp
@@ -34,6 +34,7 @@
 #include "FTLJITCode.h"
 #include "FTLOSRExit.h"
 #include "FTLSaveRestore.h"
+#include "OperandsInlines.h"
 #include "Operations.h"
 #include "RepatchBuffer.h"
 
